---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: n/a
  Bugfixes:
   - Fixed enemy expansions not being leveled.
   - Fixed capture bot rocket being unable to capture leveled spawners.
---------------------------------------------------------------------------------------------------
Version: 0.2.0
Date: 2025-05-23
  Optimizations:
    - Improved compatibility with mods that dynamically spawn enemies (e.g. Resource Spawner
      Overhaul).
    - Send the `raise_script_built` event when replacing spawners (other mods can listen to this
      event to dynamically detect new spawners).
    - Fixed compatibility with mods that don't set `max_health`.
    - Improved performance by not trying to autoplace leveled spawners during chunk population.
  Balancing:
    - Slightly adjusted evolution factor boundaries when calculating spawn distribution.
  Changes:
    - Ordered mod settings by importance.
  Bugfixes:
    - Fixed Pest Control achievement and any modded custom kill/"don't kill manually" achievements.
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2025-05-04
  Info:
    - Initial release.